feat: fix for model creation
